--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "materialize": "^0.97.8",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "oauth-js": "oauthio-web#^0.6.1"
   }
 }
